# kya_hr

./: .gitignore  .pre-commit-config.yaml  Dockerfile  GUIDE_ASSIGNATION_ROLES_WORKFLOWS.md  MANIFEST.in  PLAN_MODULE_RECRUTEMENT_ENQUETES.docx  PLAN_MODULE_RECRUTEMENT_ENQUETES.md  README.md  TEST_CONTRATS_TOKEN.md  _audit_list.py  add_conge_notifs.py  appraisal_schema.txt  audit_detail.py  audit_fields.py  config_daaf.py  deploy_prod_kya.py  docker-bake.hcl  documentation_flux.md  fix_all.py  fix_container.py  fix_doctypes.py  pyproject.toml  repair_fr_ultra.py  setup.py  test_inventaire_e2e.py
kya_hr/: BottomTabs.vue  Home.vue  KYADocuments.vue  KYALinks.vue  KYASurveys.vue  KYATasks.vue  __init__.py  api.py  apply_all.py  apply_runner.py  backfill_pv_valorisation.py  check_all.py  check_hr_status.py  chef_routing.py  cleanup_icons.py  commands.py  create_kya_stagiaires_ws.py  create_workflows.py  debug_ws.py  deploy_hrms_v2.py  deploy_intern_interface.py  desktop_icons.py  diag_all_issues.py  diag_content.py  diag_desktop.py  diag_everything.py  diag_full.py  diag_sidebar.py  diag_stagiaires.py  diag_ws.py  diag_ws_fix.py  dump_content.py  dump_sidebar.py  email_notifications.py  ensure_visibility.py  final_french_touch.py  fix_all_workspaces.py  fix_all_ws_issues.py  fix_chef_notif.py  fix_dashboard.py  (+82 more)
kya_hr/api/: __init__.py  attendance_import.py  audit_wf.py  bon_commande.py  inventaire_dashboard.py  kya_contracts.py  kya_dashboard.py  matricules_import.py  stock_projet_client.py  webform_helpers.py
kya_hr/fixtures/: custom_field.json  email_template.json  (+9 more)
(+259 files in other folders)
