[project]
name = "kya_hr"
authors = [
    { name = "Patrickleondev", email = "patrick@example.com" }
]
description = "KYA HR customisations"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "kya_hr"
